--- a/Microsoft.Teams.Samples.TaskModule.Web/Web.config
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Web.config
@@ -13,9 +13,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="MicrosoftAppId" value="5be69a48-f176-4b3a-9078-2385293cda8b" />
-    <add key="MicrosoftAppPassword" value="K+z|1AJUyhjdu-wc" />
-    <add key="BaseUrl" value="https://taskmodulecsharpdemo.azurewebsites.net" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
+    <add key="BaseUrl" value="" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
