--- a/Microsoft.Teams.Samples.TaskModule.Web/Manifest/manifest.json
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Manifest/manifest.json
@@ -11,12 +11,12 @@
     "termsOfUseUrl": "https://www.microsoft.com/termsofuse"
   },
   "name": {
-    "short": "Task Module CSharp",
-    "full": "Task Module CSharp Sample"
+    "short": "Task Module Sample (C#)",
+    "full": "Task Module Sample (C#/.NET version)"
   },
   "description": {
-    "short": "Task Module CSharp for Microsoft Teams",
-    "full": "This sample app provides a very simple Task Module functionality."
+    "short": "Task Module Demo - C#/.NET Edition",
+    "full": "This is a sample app for the Task Module feature written in C#."
   },
   "icons": {
     "outline": "contoso20x20.png",
@@ -29,7 +29,7 @@
       "name": "Tasks!",
       "contentUrl": "https://taskmodulecsharpdemo.azurewebsites.net/tasks",
       "scopes": [
-        "personal"
+        "personal", "team"
       ]
     }
   ],
@@ -39,7 +39,7 @@
       "needsChannelSelector": false,
       "isNotificationOnly": false,
       "scopes": [
-        "personal"
+        "personal", "team"
       ]
     }
   ],
