1. Added channel   2. fixed the size of the custom form and adaptive card task module   3. made the YouTube and PowerApp task modules accessible from the bot   4. added a bot menu to make it obvious how to invoke the card -   5. Removed The "View" button from adaptive card.

--- a/Microsoft.Teams.Samples.TaskModule.Web/Manifest/manifest.json
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Manifest/manifest.json
@@ -37,8 +37,9 @@
       "entityId": "com.contoso.taskmodule.task",
       "name": "Tasks!",
       "contentUrl": "https://taskmodulecsharpdemo.azurewebsites.net/tasks",
+      "websiteUrl": "https://taskmodulecsharpdemo.azurewebsites.net/tasks",
       "scopes": [
-        "personal", "team"
+        "personal"
       ]
     }
   ],
@@ -48,10 +49,28 @@
       "needsChannelSelector": false,
       "isNotificationOnly": false,
       "scopes": [
-        "personal", "team"
+        "personal",
+        "team"
+      ],
+      "commandLists": [
+        {
+          "scopes": [
+            "personal",
+            "team"
+          ],
+          "commands": [
+            {
+              "title": "tasks",
+              "description": "Test the task module with an Adaptive & Thumbnail card"
+            }
+          ]
+        }
       ]
     }
   ],
-  "permissions": [],
+  "permissions": [
+    "identity",
+    "messageTeamMembers"
+  ],
   "validDomains": [ "taskmodulecsharpdemo.azurewebsites.net" ]
 }
