1. Updated height of adaptive card task module 2. Updated OSS header

--- a/Microsoft.Teams.Samples.TaskModule.Web/Web.config
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Web.config
@@ -13,9 +13,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
-    <add key="BaseUrl" value="" />
+    <add key="MicrosoftAppId" value="9311bf03-c661-400f-a3c5-950b1dcb7c75" />
+    <add key="MicrosoftAppPassword" value="wiPOLB486{![xhqbhXKC38$" />
+    <add key="BaseUrl" value="https://taskmoduletest.ngrok.io" />
 
   </appSettings>
   <system.web>
