--- a/Microsoft.Teams.Samples.TaskModule.Web/Web.config
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Web.config
@@ -13,9 +13,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="MicrosoftAppId" value="9311bf03-c661-400f-a3c5-950b1dcb7c75" />
-    <add key="MicrosoftAppPassword" value="wiPOLB486{![xhqbhXKC38$" />
-    <add key="BaseUrl" value="https://taskmoduletest.ngrok.io" />
+    <add key="MicrosoftAppId" value="00000000-0000-0000-0000-000000000000" />
+    <add key="MicrosoftAppPassword" value="paste-password-here" />
+    <add key="BaseUrl" value="https://contoso.com" />
 
   </appSettings>
   <system.web>
